white-space:nowrap (fix for ugly big tables on small screen)

--- a/app/style.css
+++ b/app/style.css
@@ -77,6 +77,7 @@ p.p-seq {
 #stage-table td {
     vertical-align: top;
     overflow: hidden;
+    white-space: nowrap;
 }
 
 html, body {
